--- a/Dockerfile.onbuild
+++ b/Dockerfile.onbuild
@@ -3,8 +3,10 @@ MAINTAINER Madhav Raj Maharjan <madhav.maharjan@gmail.com>
 
 LABEL description="Docker container for Nginx" os_version="Ubuntu 14.04"
 
-ENV HOME /root
+ARG NGINX_VERSION
 ARG DEBUG=false
+
+ENV NGINX_VERSION ${NGINX_VERSION}
 
 RUN mkdir -p /build
 COPY . /build
