--- a/Dockerfile.onbuild
+++ b/Dockerfile.onbuild
@@ -15,7 +15,8 @@ COPY . /build
 
 RUN /build/scripts/install.sh && /build/scripts/cleanup.sh
 
-ONBUILD COPY config/nginx/default.conf /etc/nginx/conf.d/default.conf
+ONBUILD COPY config/nginx/default.conf /config/etc/nginx/conf.d/default.conf
+ONBUILD COPY services/nginx-startup.sh /etc/my_init.d
 
 VOLUME ["/etc/nginx/conf.d", "/usr/share/nginx/html", "/var/log/nginx"]
 
