--- a/Dockerfile.onbuild
+++ b/Dockerfile.onbuild
@@ -16,7 +16,8 @@ COPY . /build
 RUN /build/scripts/install.sh && /build/scripts/cleanup.sh
 
 ONBUILD COPY config/nginx/default.conf /config/etc/nginx/conf.d/default.conf
-ONBUILD COPY services/nginx-startup.sh /etc/my_init.d
+ONBUILD COPY services/nginx-startup.sh /etc/my_init.d/nginx-startup.sh
+ONBUILD RUN chmod 750 /etc/my_init.d/nginx-startup.sh
 
 VOLUME ["/etc/nginx/conf.d", "/usr/share/nginx/html", "/var/log/nginx"]
 
