Added Travis CI and updated baseimage as docker-base:16.04

--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -2,10 +2,44 @@ server {
   listen 80 default_server;
   server_name _;
 
-  root /usr/share/nginx/html;
+  root /var/www/html;
   index index.html index.htm;
 
+  error_page 404 /404.html;
+  error_page 403 /403.html;
+  error_page 405 /405.html;
+  error_page 500 502 503 504 /50x.html;
+
+  location = /403.html {
+    internal;
+  }
+
+  location = /404.html {
+    internal;
+  }
+
+  location = /405.html {
+    internal;
+  }
+
+  location = /50x.html {
+    internal;
+  }
+
+  location /.500test {
+    fastcgi_pass unix:/does/not/exist;
+  }
+
+  location /.403test {
+  
+  }
+
+  add_header Allow "HEAD, GET, POST" always;
+  if ( $request_method !~ ^(HEAD|GET|POST)$ ) {
+    return 405;
+  }
+
   location / {
-    try_files $uri $uri/ /index.html;
+    index index.html index.htm;
   }
 }
