--- a/config/nginx/vhost-proxy.conf
+++ b/config/nginx/vhost-proxy.conf
@@ -1,11 +1,11 @@
 
-upstream proxy-##PROXY_HOST## {
-  server ##PROXY_HOST##:##PROXY_PORT##;
+upstream proxy-${PROXY_VHOST_NAME}-${PROXY_HOST} {
+  server ${PROXY_HOST}:${PROXY_PORT};
 }
 
 server {
-  listen 80 default_server;
-  server_name _;
+  listen 80;
+  server_name ${PROXY_VHOST_NAME};
 
   root /var/www/html;
 
@@ -42,7 +42,7 @@ server {
     return 405;
   }
 
-	proxy_intercept_errors on;
+  proxy_intercept_errors on;
   chunked_transfer_encoding on;
   client_max_body_size 0;
 
@@ -57,6 +57,6 @@ server {
   proxy_send_timeout 600;
 
   location / {
-    proxy_pass ##PROXY_SCHEME##://proxy-##PROXY_HOST##;
+    proxy_pass ${PROXY_SCHEME}://proxy-${PROXY_VHOST_NAME}-${PROXY_HOST};
   }
 }
