proxy_pass uri fix

--- a/config/nginx/default-proxy.conf
+++ b/config/nginx/default-proxy.conf
@@ -57,6 +57,6 @@ server {
   proxy_send_timeout 600;
 
   location / {
-    proxy_pass ${PROXY_SCHEME}://proxy--default-${PROXY_HOST};
+    proxy_pass ${PROXY_SCHEME}://proxy-default-${PROXY_HOST};
   }
 }
