--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ branches:
   only:
   - master
 
-dist: trusty
+dist: xenial
 language: minimal
 
 jobs:
@@ -14,4 +14,3 @@ jobs:
       - make build DEBUG=false
       - make tag_latest DEBUG=false
       - make release DEBUG=false
-      - curl -s -X POST "https://hooks.microbadger.com/images/${TRAVIS_REPO_SLUG}/JEGoeIhTzcKmaiXUikL3HE6W26k="
